k8s/pt/development/mongodb-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    component: mongo
