k8s/pt/development/mongodb-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-nodeport
spec:
  type: NodePort
  selector:
    component: mongo
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30020
