k8s/pt/development/development-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: development-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
#  tls:
#    - hosts:
#        - dev.api.project.com
#      secretName: dev-api-project-com-tls
  rules:
    - host: dev.api.project.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 5000
